Make the DenseFileController also show the LoggerName - was just a BIT toooooo dense otherwise.